# pi-gazing

./: .gitignore  MakeVirtualEnvironment  README.md  install.sh  installation_info.py  make_virtual_environment.sh
archive/: .gitattributes  README  README.md
archive/20150309_observe/: Makefile
archive/20160203_observatoryWebsite/: README.md  gulpfile.js
archive/meteorpi_artwork/: highlights.xcf  moving_objects.xcf  simultaneous.xcf  still_images.xcf
archive/meteorpi_calibration/: 20151218062000_Bury-St-Edmunds_frame_BS1_LC1.starlist  create_hipparcos_json.py  get_radec.py  lensFit.py
configuration/: installation_settings.conf
configuration_global/: known_observatories.xml
configuration_global/camera_properties/: README.md  cameras.xml  lenses.xml
configuration_local/: installation_settings.conf
docs/: pi_setup.txt
src/: .gitattributes  .gitignore
src/calibration/: calibrate_lens.py  calibrate_lens_from_star_list.py  calibrate_lens_with_subimages.py  hipparcos_catalogue.json  list_calibration.py  list_orientation.py  orientation_calculate.py  orientation_daily_average.py  plot_orientation.py  worst_orientations.py
src/cameraControl/: cameraStatusLog.sh  daytimeJobs.py  daytimeJobsClean.py  exportData.py  firebirdImport.py  gpsFix.py  lensFit.py  loadMonitor.py  main.py  mod_astro.py  mod_daytimejobs.py  mod_deleteOldData.py  mod_gps.py  mod_hardwareProps.py  mod_hwm.py  mod_log.py  mod_relay.py  mod_settings.py  mod_time.py  mod_xml.py  module_astro.py  module_daytimejobs.py  module_gps.py  module_hwm.py  module_log.py  module_relay.py  module_settings.py  observe.sh  orientationCalc.py  timelapse.py  (+2 more)
src/helpers/image_processing/: CMakeLists.txt  SConstruct
src/helpers/image_processing/src/: backgroundSub.c  backgroundSub.h  gnomonic.c  gnomonic.h  imageProcess.c  imageProcess.h  readConfig.c  readConfig.h  settings.c  settings.h  str_constants.h
src/helpers/image_processing/src/argparse/: argparse.c
src/helpers/image_processing/src/frontends/: lensCorrect.c  multiply.c  resize.c  skyClarity.c  stack.c  subtract.c
src/helpers/image_processing/src/frontends/converters/: rawimg2png.c  rawimg2png3.c  rawvid2frames.c  rawvid2mp4_libav.c  rawvid2mp4_openmax.c
src/helpers/image_processing/src/jpeg/: jpeg.h  jpeg_in.c
src/helpers/image_processing/src/png/: image.h  image_in.c  image_out.c
src/helpers/image_processing/src/utils/: asciiDouble.c  asciiDouble.h  error.c  error.h  julianDate.c  julianDate.h  lensCorrect.c  lensCorrect.h  skyClarity.c  skyClarity.h
src/helpers/image_processing/src/vidtools/: color.c  color.h  v4l2uvc.c  v4l2uvc.h
src/helpers/python_packages/: setup.cfg
src/helpers/python_packages/pigazing_helpers/: connect_db.py  constellation_fetch.py  daytime_jobs.py  dcf_ast.py  gnomonic_project.py  hardware_properties.py  path_projection.py  relay_control.py  settings_read.py  sunset_times.py  vector_algebra.py
src/helpers/python_packages/pigazing_helpers/obsarchive/: dcf_ast.py  exporter.py  generators.py  gnomonic.py  importer_api.py  obsarchive_db.py  obsarchive_model.py  obsarchive_server.py  obsarchive_sky_area.py  query_api.py
src/helpers/python_packages/src/pigazing_helpers/: connect_db.py  constellation_fetch.py  dcf_ast.py  hardware_properties.py  settings_read.py  vector_algebra.py
src/helpers/python_packages/src/pigazing_helpers/obsarchive/: admin_api.py  generators.py  importer_api.py  obsarchive_server.py
src/imageProjection/: CMakeLists.txt  Makefile  README.md  SConstruct  align_gnomonic.py  align_regularise.py  fitinfo_gnomonic.py  fitplot_gnomonic.py  mod_gnomonic.py
src/imageProjection/src/: asciiDouble.c  asciidouble.c  asciidouble.h  backgroundSub.c  backgroundSub.h  barrel.c  error.c  error.h  gnomonic.c  gnomonic.h  image.h  imageProcess.c  imageProcess.h  image_in.c  image_out.c  multiply.c  readConfig.c  readConfig.h  settings.c  settings.h  stack.c  subtract.c
src/imageProjection/src/frontends/: barrel.c  cameraFit.c  multiply.c  resize.c  stack.c  subtract.c
src/observatoryControl/videoAnalysis/: CMakeLists.txt  SConstruct
src/observatoryControl/videoAnalysis/src/: settings.h  settings_dslr.h  settings_webcam.h  str_constants.h
src/observatoryControl/videoAnalysis/src/analyse/: observe.c  observe.h  trigger.c
src/observatoryControl/videoAnalysis/src/converters/: rawimg2png.c  rawimg2png3.c  rawvid2frames.c  rawvid2mp4_libav.c  rawvid2mp4_openmax.c
src/observatoryControl/videoAnalysis/src/frontends/: analyseH264_libav.c  makeMedianMap.c  realtimeObserve.c  realtimeObserve_dslr.c  recordH264.c  skyClarity.c  snapshot.c  vidRec.c
src/observatoryControl/videoAnalysis/src/jpeg/: jpeg.h  jpeg_in.c
src/observatoryControl/videoAnalysis/src/png/: image.h  image_in.c  image_out.c
src/observatoryControl/videoAnalysis/src/utils/: JulianDate.c  JulianDate.h  asciiDouble.h  asciidouble.c  asciidouble.h  error.c  error.h  filledPoly.c  filledPoly.h  julianDate.c  lensCorrect.c  lensCorrect.h  tools.c  tools.h
src/observatoryControl/videoAnalysis/src/vidtools/: color.c  color.h  uvcvideo.h  v4l2uvc.c  v4l2uvc.h
src/observe/video_analysis/: CMakeLists.txt  SConstruct  prettymake
src/observe/video_analysis/src/: argparse  jpeg  png  settings.h  settings_dslr.h  settings_webcam.h  str_constants.h  vidtools
src/observe/video_analysis/src/analyse/: observe.c  observe.h  trigger.c  trigger.h  write_output.c  write_output.h
src/observe/video_analysis/src/converters/: rawimg2png.c  rawvid2mp4_libav.c
src/observe/video_analysis/src/frontends/: analyseH264_libav.c  makeBackgroundMap.c  makeMedianMap.c  realtimeObserve.c  realtimeObserve_dslr.c  recordH264.c  recordH264_libav.c  recordH264_openmax.c  snapshot.c  videoRecord.c
src/observe/video_analysis/src/jpeg/: jpeg_in.c
src/observe/video_analysis/src/png/: image_in.c
src/observe/video_analysis/src/utils/: asciiDouble.c  asciiDouble.h  error.c  error.h  filledPoly.c  filledPoly.h  julianDate.c  julianDate.h  tools.c  tools.h
src/observe/video_analysis/src/vidtools/: uvc_compat.h  v4l2uvc.c
www/: .gitignore  meteorapplication.wsgi
(+780 files in other folders)
