[metadata]
name=pigazing_helpers
version=0.1.0
author=Dominic Ford
author_email=
description=Helper functions for pigazing
long_description=Helper functions for pigazing
url=https://pigazing.dcford.org.uk/
license=MIT
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
